--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "recipes",
   "version": "0.0.0",
   "devDependencies": {
+    "cucumber": "^0.9.2",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
     "karma-jasmine": "^0.3.6",
     "karma-junit-reporter": "^0.3.8",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.18",
+    "protractor": "^3.0.0"
+  },
+  "scripts": {
+    "postinstall": "node_modules/protractor/bin/webdriver-manager update"
   }
 }
