--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "recipes",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "devDependencies": {
     "cucumber": "^0.9.2",
     "jasmine-core": "^2.3.4",
@@ -9,9 +9,11 @@
     "karma-junit-reporter": "^0.3.8",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.18",
-    "protractor": "^3.0.0"
+    "protractor": "^3.0.0",
+    "protractor-cucumber-framework": "^0.3.3"
   },
   "scripts": {
-    "postinstall": "node_modules/protractor/bin/webdriver-manager update"
+    "postinstall": "node_modules/protractor/bin/webdriver-manager update",
+    "protractor": "node_modules/protractor/bin/protractor tests/e2e/protractor.conf.js"
   }
 }
