--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "recipes",
   "version": "0.1.0",
   "devDependencies": {
+    "chai": "^3.5.0",
+    "chai-as-promised": "^5.2.0",
     "cucumber": "^0.9.2",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
