--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.2.0",
     "cucumber": "^0.9.2",
+    "http-server": "^0.8.5",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
     "karma-jasmine": "^0.3.6",
@@ -16,6 +17,8 @@
   },
   "scripts": {
     "postinstall": "node_modules/protractor/bin/webdriver-manager update",
-    "protractor": "node_modules/protractor/bin/protractor tests/e2e/protractor.conf.js"
+    "start": "http-server ./app",
+    "protractor": "node_modules/protractor/bin/protractor tests/e2e/protractor.conf.js",
+    "unit": "node_modules/karma/bin/karma start tests/unit/karma.conf.js"
   }
 }
