--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "chai": "^3.5.0",
     "chai-as-promised": "^5.2.0",
     "cucumber": "^0.9.2",
+    "express": "^4.13.4",
     "http-server": "^0.8.5",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.15",
@@ -12,6 +13,7 @@
     "karma-junit-reporter": "^0.3.8",
     "karma-phantomjs-launcher": "^0.2.1",
     "phantomjs": "^1.9.18",
+    "pm2": "^1.0.1",
     "protractor": "^3.0.0",
     "protractor-cucumber-framework": "^0.3.3"
   },
